public/css/main.scss
@import "themes/default/variables";

@import "lib/bootstrap/bootstrap";
@import "lib/font-awesome/font-awesome";

@import "themes/default/default";

// Scaffolding
// -------------------------

html {
  position: relative;
  min-height: 100%;
}

body {
  margin: 0;
  padding-top: 60px;
  margin-bottom: 75px;
  background-color: #F7F8FA;
} 

/**
* Styles of listing photo pages (hot, trending)
*/
.hot-photo-wrapper{
  padding: 0;
  padding-top:1%; 
  text-align: center;
  margin: 0;
  position: relative;
  width: 95vw;
  background-color: rgba(247,248,250,1);
}

.single-photo-wrapper{
  padding: 10px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 15px;
  background-color: rgba(255, 255, 255, 0.9);
  margin-bottom: 1%;
  border: 1px solid #eaeaea;
  border-radius: 5px;
  background-color: #F7F8FA; 
  height:  75vh;
  text-align: center;
}
.image-wrapper{
  height: 40vh; 
  width: 100%;
  overflow: hidden;
  background-color: #F7F8FA;
}
.single-image{
  object-fit: cover;
  zoom: 1;
 /* height: 100%;
  height: auto;*/
  max-width:100%;
  max-height:100%;
}

.single-photo-heading{
  font-size: 24px;
  text-align: left;
  color: #000000;
  font-family: "Courier New", Courier, monospace;
}

.single-photo-heading:hover{
  font-size: 24px;
  text-align: left;
  color: #000000;
  text-decoration: none;
}
.single-photo-details{
  font-family: "Courier New", Courier, monospace;
}

.single-photo-description-wrapper{
  margin-top: 5px;
  display: inline-block;
  width: 75%;
  text-align: left;
  background-color: white;
  padding: 0%;
  background-color: #F7F8FA;
}

.single-photo-description{
  padding: 1%;
  font-size: 1.0vw;
  font-family: "Courier New", Courier, monospace;
}
.single-photo-upvote-wrapper{
  display: inline-block;
  float: right;
  margin-right:0px;
}
.fa.fa-camera-retro.vote, .downvote{
  font-size: 24px;
  height: 50px;
  width: 50px;
  background-color: rgba(0,0,0,0.0);
  border: 0;
}

.fa.fa-camera-retro.vote:hover{
  background-color: rgba(0,255,0,0.3);
  border-radius: 5px;
}

.downvote:hover{
  background-color: rgba(255, 0, 0, 0.6);
}

.single-photo-votes{
  display: inline-block;
  float: left;
  margin-top:22px;
  margin-right:15px;
  font-family: "Courier New", Courier, monospace;
  font-weight: 600;
  font-size: 1.3w;
}

.sharing-wrapper{
  position:absolute;
  top:0;
  right: -30px;
}

.facebook-share{
  position: absolute;
  font-size: 40px;
  color: #3b5998;
  top: 95px;
  left: -35px;
}

@media (max-width: 600px){
  .facebook-share{
    width: 35px;
    overflow: hidden;
  }
}

.google-share{
  position: absolute;
  font-size: 40px;
  color: #DD4D42;
  top: 150px;
  left: -35px;
}

.twitter-share{
  position: absolute;
  font-size: 40px;
  color: #78C2F6;
  top: 190px;
  left: -35px;
}

.comment-box{
  position: absolute;
  font-size: 40px;
  color: #33b233;
  top: 70px;
  left: -35px;
}

.facebook-share:hover, .comment-box:hover, .twitter-share:hover, .google-share:hover{
  color: rgba(0, 0, 0, 0.4);
  left: -20px;
}

/**
* Upload page
*/
textarea {
  resize: none;
}

.upload-wrapper,
.upload-file,
.upload-title,
.upload-tags{
  float: center;
  padding: 1%;  
  font-size: 18px;
  font-family: "Arial", Times;
}

.upload-tags{
  clear: both;
  width: 100%;
}

.upload-description{
  float: left;
  width: 100%;
}

.control-label-file, .control-label-title, .control-label-description, .control-label-tags{
  display: inline-block;
  font-size: 18px;
  margin: 1%;
  float: left;
}

#submit-upload{
  display: inline-block;
  width: 100%;
  margin-top: 1%;
}
/**
*Photo description
*/
//TODO make me beautiful
.tag{
  border: 1px solid black;
}

/**
* Overwriting navbar styles
*/
.navbar-nav img {
  width: 30px;
  height: 30px;
  margin: -15px 15px -15px;
}
 
.navbar-brand{
  font-size: 30px;
  font-family: "Courier New", Courier, monospace;
  font-weight: 500;
  letter-spacing: 5px;
}

.navbar-brand:hover{
  background: black;
  font-size: 40px;
  margin-left: -30px;
}


/**
* Alerts
*/
.alert {
  margin-top: 20px;
}

/**
* Other user profile page
*/

.thumbnail {
  padding: 0;
  border-radius: 0;
  box-shadow: 0 0 5px #ccc, inset 0 0 0 #000;
}

/**
* Icons
*/
.fa {
  margin-right: 6px;
}

/**
* User profile page
*/
#description{
  height: 150px;
  resize: none;
}

/**
* Other user profile page
*/
footer {
  position: relative;
  bottom: 0;
  width: 100%;
  height: 45px;
  line-height: 45px;

  p, ul {
    margin-bottom: 0;
  }
}
.user-picture{
  width: 50vh;
  height: auto;
}
.picture-title{
  font-size: 2vw;
  margin-bottom: 1%;
}

.picture-date{
   font-family: "Courier New", Courier, monospace;
   font-size: 1vw;
}
.title{
  font-size: 3vw;
   font-family: Verdana, Geneva, sans-serif;
}

.subtitle{
  font-size: 2vw;
  font-family: "Courier New", Courier, monospace;
}

.profile-pic{
  border-radius: 5px;
}

.user-description{
  font-family: "Courier New", Courier, monospace;
}

.date-registered{
  font-size: 1vw;
  font-family: "Courier New", Courier, monospace; 
}

@media (max-width: 500px){
  .date-registered{
    display: none;
  }
  .picture-date{
    display:none;
  }
  .title{
    font-size: 4vw;
  }
  .picture-title{
    font-size: 15vw;
  }
}

.picture-title{
  color: #000000;
  font-size: 1.5vw;
  text-decoration: none;
  font-family: "Courier New", Courier, monospace;
}

.picture-title:hover{
  color: #000000;
  text-decoration: none;
}

.single-photo-other{
  background-color: white;
  overflow:hidden;
  background-color: #eff0f2;
  border: 1px solid #F7F8FA;
  padding: 1%;
}

.picture-description{
  margin-top: 1%;
  height: auto;
  overflow: hidden;
  font-family: "Courier New", Courier, monospace;
}

.picture-wrapper{
  height: 200px;
  overflow: hidden;
  margin-top:1%;
}

.other-profile-wrapper{
  background-color: #eff0f2;
  padding: 1%;
  border-radius: 3px;
}

.picture-votes{
  font-family: "Courier New", Courier, monospace;
  font-weight: bold;
  float: right;
}

/**
* Photo details
*/
/*.upvote, .downvote{
  width: 50px;
  height: 50px;
  font-size: 24px;
  margin: 0;
}*/


/**
* Footer styles
*/
footer {
  position: relative;
  bottom: 0;
  width: 100%;
  height: 45px;
  line-height: 45px;

  p, ul {
    margin-bottom: 0;
  }
}

